tests/negative/semantics/arg_mismatch.stream
// EXPECT: Error
function add(a: Int, b: Int) -> Int {
    return a + b;
}
print(add(1, 2, 3)); // ERROR: Too many arguments